fixed bug where C logo wasn't centred on safari

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ canvas {
   top: 50vh;
   left: 50vw;
   transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+
   height: 200px;
   width: 200px;
   pointer-events: none;
